--- a/README.rmd
+++ b/README.rmd
@@ -13,7 +13,7 @@ Repository to create a radial plot for the ERAM project.
 
 ```{r code}
 
-# First install requred R packages (if not already installed)
+# Install requred R packages (if not already installed)
 if(!require(scales)) {install.packages(scales)}
 if(!require(ggplot2)) {install.packages(ggplot2)}
 if(!require(dplyr)) {install.packages(dplyr)}
@@ -22,17 +22,17 @@ if(!require(readr)) {install.packages(readr)}
 # R function to create the Radial plot
 source("ERAMRadialPlot.R")
 
-#Next, read-in tabular data from a csv file to create the visual
+# Read-in tabular data from a csv file to create the visual
 data <- readr::read_csv("sample_data.csv")
 
-# Create plots & save to a png file
+# Generate radial plot based on the data
 p <- ERAMRadialPlot(data)
 
-# Save to png  
-ggsave(filename = "radialplot.png", plot = p, width = 8, height = 8)
+# Save plot to png  
+ggplot2::ggsave(filename = "radialplot.png", plot = p, width = 8, height = 8)
 
-# Save to pdf 
-ggsave(filename = "radialplot.pdf", plot = p, width = 8, height = 8)
+# Save plot to pdf 
+ggplot2::ggsave(filename = "radialplot.pdf", plot = p, width = 8, height = 8)
 ```
 
 ```{r plots, echo = FALSE, fig.width=8, fig.height=8}
